--- a/index.html
+++ b/index.html
@@ -10,8 +10,42 @@
     <div id="container">
 
       <!-- intestazione  -->
-      
+
       <header>
+
+        <img id="logo" src="img/logo.png" alt="logo neori">
+
+        <nav id="headernav">
+          <ul>
+            <li>
+              <a href="#"> FEATURES </a>
+            </li>
+
+            <li>
+              <a href="#">EDITORIALS</a>
+            </li>
+
+            <li>
+              <a href="#">ENVIROMENTS</a>
+            </li>
+
+            <li>
+              <a href="#">BLOG</a>
+            </li>
+
+            <li>
+              <a href="#">SHOP</a>
+            </li>
+
+            <li>
+              <a href="#">CONTACT</a>
+            </li>
+          </ul>
+
+        </nav>
+
+
+
 
       </header>
 
@@ -20,25 +54,40 @@
       <main>
 
         <section>
-          <div class="blocco">
+          <div id="banner">
+
           </div>
         </section>
-
 
         <section>
 
           <div class="sezionet">
+            <h2>Leadership</h2>
+            <p>Feternum urna a libero tempus</p>
           </div>
 
           <div class="row">
 
             <div class="sezione2">
+              <img src="img/img-1.jpg" alt="">
+              <h5>Lorem</h5>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
             </div>
 
             <div class="sezione3">
+              <img src="img/banner-2.jpg" alt="">
+              <h5>Ipsum</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+
             </div>
 
             <div class="sezione2">
+              <img src="img/img-3.jpg" alt="">
+              <h5>Lorem</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim .</p>
+
             </div>
 
           </div>
@@ -48,6 +97,12 @@
       <!-- piè di pagina -->
 
       <footer>
+        <div class="love">Designed with <span class="heart">&hearts;
+        </span>
+        <div>
+
+
+
 
       </footer>
 
